--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "archsplace_client_business",
+  "name": "innoweb",
   "version": "1.0.0",
   "description": "## Table of Contents",
   "main": "index.js",
   "scripts": {
-    "install:env": "sh scripts/env.sh",
     "commit": "sh scripts/commit.sh",
-    "initiate": "sh scripts/initiate.sh",
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/archsplace/archsplace_client_business.git"
+    "url": "git+https://github.com/erwanriou/innoweb.git"
   },
   "keywords": [],
   "author": "Erwan Riou && Kasper Mikkel Sonne",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/archsplace/archsplace_client_business/issues"
+    "url": "https://github.com/erwanriou/innoweb/issues"
   },
-  "homepage": "https://github.com/archsplace/archsplace_client_business#readme",
+  "homepage": "https://github.com/erwanriou/innoweb#readme",
   "dependencies": {
-    "@archsplace/archsplace_classify": "1.0.16",
-    "@archsplace/archsplace_countries": "1.0.2",
     "axios": "0.21.1",
     "next": "10.0.1",
     "next-redux-wrapper": "6.0.2",
