[Project] - added zederkop case

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "innoweb",
+  "name": "innoweb-nextjs",
   "version": "1.0.0",
   "description": "## Table of Contents",
   "main": "index.js",
