--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Table of Contents",
   "main": "index.js",
   "engines": {
-    "node": "14.x"
+    "node": "18.17.0"
   },
   "scripts": {
     "commit": "sh scripts/commit.sh",
@@ -25,18 +25,18 @@
   "homepage": "https://github.com/erwanriou/innoweb#readme",
   "dependencies": {
     "axios": "0.21.1",
-    "next": "10.0.1",
-    "next-redux-wrapper": "6.0.2",
+    "next": "14.0.3",
+    "next-redux-wrapper": "8.1.0",
     "next-translate": "1.0.0",
-    "react": "17.0.1",
+    "react": "18.2.0",
     "react-cookie": "4.0.3",
-    "react-dom": "17.0.1",
+    "react-dom": "18.2.0",
     "react-jss": "10.5.0",
-    "react-redux": "7.2.0",
-    "react-responsive": "8.1.0",
-    "react-select": "3.1.0",
+    "react-redux": "8.1.3",
+    "react-responsive": "9.0.2",
+    "react-select": "5.8.0",
     "redux": "4.0.5",
-    "redux-form": "8.3.7",
+    "redux-form": "8.3.10",
     "redux-thunk": "2.3.0",
     "sharp": "0.26.3"
   }
