--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
   },
   "homepage": "https://github.com/erwanriou/innoweb#readme",
   "dependencies": {
-    "axios": "0.21.1",
+    "axios": "1.6.2",
     "next": "14.0.3",
-    "next-translate": "1.0.0",
+    "next-translate-plugin": "2.6.2",
     "react": "18.2.0",
     "react-cookie": "4.0.3",
     "react-dom": "18.2.0",
     "react-jss": "10.5.0",
     "react-redux": "8.1.3",
     "react-responsive": "9.0.2",
-    "react-select": "5.8.0",
-    "sharp": "0.26.3"
+    "react-select": "5.8.0"
   }
 }
